DuPont DevSB/src/objects/FF_PSA_Pricing_Margins__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Prepopulated based on the Region/Sub region and Country of the Project</description>
    <fields>
        <fullName>FF_PSA_CountryList__c</fullName>
        <label>FF_PSA_CountryList</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Floor_Margin_pct__c</fullName>
        <label>Floor Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Stretch_Margin_pct__c</fullName>
        <label>Stretch Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FF_PSA_Target_Margin_pct__c</fullName>
        <label>Target Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>FF PSA Pricing Margins</label>
</CustomObject>